# player

./: .gitignore  CMakeLists.txt  README.md  player.pro
include/: audio_processor.h  controller.h  decoder.h  demuxer.h  mainwindow.h  processor.h  video_processor.h
src/: audio_processor.cpp  controller.cpp  decoder.cpp  demuxer.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  video_processor.cpp
